<resources>
    <string name="app_name">Orgs</string>
    <string name="botao_floating">botao_floating</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="mais">Mais</string>
    <string name="descricaomore">descricaomore</string>
    <string name="descricaosearch">descricaosearch</string>
    <string name="novo_produto">Nova nota</string>
    <string name="nome">Nome</string>
    <string name="descri_o">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="imagemupload">ImagemUpload</string>
    <string name="carregar">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="remove">remove</string>
    <string name="edita">Edita</string>
    <string name="valor_asc">Maior Valor</string>
    <string name="valor_desc">Menor Valor</string>
    <string name="descricao_asc">Descricao Asc</string>
    <string name="descricao_desc">Descricao Desc</string>
    <string name="nome_asc">Nome</string>
    <string name="nome_desc">Nome</string>
    <string name="sem_ordem">Sem Ordem</string>
    <string name="entrar">Continuar</string>
    <string name="perfil">Perfil</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="username">Usuario</string>
    <string name="Login">Login\n</string>
    <string name="cadastrar_um_usuario">Cadastrar um usuario</string>
    <string name="editar">Editar</string>
    <string name="inicio">Inicio</string>
    <string name="sair">Sair</string>
    <string name="opcoes">Opcoes</string>
    <string name="telefone">Telefone</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="ajuda">ajuda</string>
    <string name="bibliografia">Bibliografia</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="salvar_user">Salvar</string>
    <string name="cadastro_usuario">Cadastro Usuario</string>
    <string name="pesquisa_na_lista">Pesquisa na Lista</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="enviar">Enviar</string>
</resources>