<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/edita_user_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/edita_user_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/editar_usuario"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/edita_user_close"
        app:layout_constraintEnd_toStartOf="@+id/edita_user_salvar"
        app:layout_constraintStart_toEndOf="@+id/edita_user_close"
        app:layout_constraintTop_toTopOf="@+id/edita_user_close" />

    <TextView
        android:id="@+id/edita_user_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Salvar"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/edita_user_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/edita_user_titulo" />

    <ImageView
        android:id="@+id/edita_user_imagem"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imagemupload"
        android:scaleType="centerCrop"
        android:src="@drawable/foto_default_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edita_user_titulo"
        app:layout_constraintVertical_bias="1.5"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_edita_user_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edita_user_imagem">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_edita_user_campo_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:editable="true"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_edita_user_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_edita_user_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_edita_user_campo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:editable="true"

            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>